parser/src/parser/snapshots/enderpy__parser__parser__tests__binary_op-5.snap
---
source: src/parser/parser.rs
description: a // b
---
Module {
    node: Node {
        start: 0,
        end: 6,
    },
    body: [
        ExpressionStatement(
            BinOp(
                BinOp {
                    node: Node {
                        start: 0,
                        end: 6,
                    },
                    op: FloorDiv,
                    left: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    right: Name(
                        Name {
                            node: Node {
                                start: 5,
                                end: 6,
                            },
                            id: "b",
                        },
                    ),
                },
            ),
        ),
    ],
}
