parser/src/parser/snapshots/enderpy__parser__parser__tests__conditional_expression.snap
---
source: src/parser/parser.rs
description: a if b else c if d else e
---
Module {
    node: Node {
        start: 0,
        end: 25,
    },
    body: [
        ExpressionStatement(
            IfExp(
                IfExp {
                    node: Node {
                        start: 25,
                        end: 0,
                    },
                    test: Name(
                        Name {
                            node: Node {
                                start: 5,
                                end: 6,
                            },
                            id: "b",
                        },
                    ),
                    body: Name(
                        Name {
                            node: Node {
                                start: 0,
                                end: 1,
                            },
                            id: "a",
                        },
                    ),
                    orelse: IfExp(
                        IfExp {
                            node: Node {
                                start: 25,
                                end: 0,
                            },
                            test: Name(
                                Name {
                                    node: Node {
                                        start: 17,
                                        end: 18,
                                    },
                                    id: "d",
                                },
                            ),
                            body: Name(
                                Name {
                                    node: Node {
                                        start: 12,
                                        end: 13,
                                    },
                                    id: "c",
                                },
                            ),
                            orelse: Name(
                                Name {
                                    node: Node {
                                        start: 24,
                                        end: 25,
                                    },
                                    id: "e",
                                },
                            ),
                        },
                    ),
                },
            ),
        ),
    ],
}
